--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,9 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+aliyun:
+  oss:
+    endpoint: https://oss-cn-hangzhou.aliyuncs.com
+    accessKeyId: LTAI5tRDX9YqJGU545iBRVHk
+    accessKeySecret: JOTMDEJGf1xjFS3RjYDRcZGjSoBMON
+    bucketName: web-itcaleb
